Fixed picture dimensions on mobile

--- a/rhododendron/styles.css
+++ b/rhododendron/styles.css
@@ -32,7 +32,7 @@ li{
     width: 50vw; 
     height:100vh; 
 }
-/*Don't change*/
+
 #rhodTitle h1{
     position: absolute; 
     bottom: 50; 
@@ -42,7 +42,7 @@ li{
     width: calc(50vw - 2em); 
     height: 100vh; 
 }
-/*Don't change*/
+
     #rhodInformationNames{
         text-align: left;
         font-size: 1.5em; 
@@ -50,7 +50,7 @@ li{
         width: calc(100vw - 2em);
         z-index: 10;
     }
-/*Don't change*/
+
 
 #rhodInformation{
     position: absolute; 
@@ -58,7 +58,7 @@ li{
     left: 50vw; 
     text-align: left;
     font-size: 1.5em;
-    padding: 1cm;/*was 1.25*/
+    padding: 1cm;
     width: calc(50vw - 2em); 
     z-index: 10; 
 }
@@ -68,8 +68,7 @@ li{
     position: absolute; 
     text-align: left; 
     width: calc(100vw - 2em);
-    bottom: 0.25vh; /*Was 0.5vh*/
-
+    bottom: 0.25vh; 
 }
 
   /*Desktop layout here*/
@@ -96,7 +95,6 @@ li{
         width: 50vw;
         top: 100vh; 
         left: 50vw; 
-        /*margin-bottom: 2vh;*/
         background-color: #BE7575;
     }
     #footer p {
@@ -110,7 +108,7 @@ li{
 @media screen and (orientation: portrait){
 
     #rhodPic {
-        width: 160vw; 
+        width: 100vw; 
     }
     #rhodTitle{
         position: bottom; 
